[project]
name = "anydi"
version = "0.64.0"
description = "Dependency Injection library"
authors = [{ name = "Anton Ruhlov", email = "antonruhlov@gmail.com" }]
requires-python = ">=3.10.0, <3.15"
readme = "README.md"
license = "MIT"
keywords = [
    "dependency injection",
    "dependencies",
    "di",
    "async",
    "asyncio",
    "application",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "typing-extensions>=4.15.0,<5",
    "anyio>=3.7.1",
    "wrapt>=1.17.0",
]

[project.urls]
Repository = "https://github.com/antonrh/anydi"

[project.entry-points.pytest11]
anydi = "anydi.ext.pytest_plugin"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pyright>=1.1.407",
    "pytest>=8.4.0,<9",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.1",
    "pytest-codspeed>=4.2.0",
    "starlette>=0.37.2",
    "fastapi>=0.100.0",
    "httpx>=0.26.0",
    "faststream>=0.6,<0.7",
    "redis>=5.0.4,<6",
    "pydantic-settings>=2.4.0,<3",
    "typer>=0.20.0",
]
docs = [
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=9.5.29,<10",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "anydi"
module-root = "."

[tool.ruff]
line-length = 88
target-version = "py310"
include = [
    "anydi/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["A", "B", "C", "E", "F", "I", "W", "TID252", "T20", "UP", "FURB", "PT"]
ignore = ["B008", "B009"]

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = ["tests", "app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = [
    "anydi/**/*.py",
    "tests/**/*.py",
]
strict = [
    "anydi/*.py",
]
typeCheckingMode = "standard"
enableExperimentalFeatures = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
omit = [
    "anydi/ext/pytest_plugin.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "@abstractmethod",
    "@abc.abstractmethod",
    "if TYPE_CHECKING",
    "if t.TYPE_CHECKING",
    "@overload",
    "@t.overload",
    "raise NotImplementedError",
    "except ImportError:",
    "if has_signature_eval_str_arg",
    "if not anyio:",
]
